# imgfilter

./: .gitignore  LICENSE  README.md  imgfilter.py  pyproject.toml  requirements.txt
imgfilter/: main.py
