[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "imgfilter"
version = "0.1.0"
authors = [
  { name="0E9B061F", email="0E9B061F@protonmail.com" },
]
description = "Image selection dialogue"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0E9B061F/imgfilter"
"Bug Tracker" = "https://github.com/0E9B061F/imgfilter/issues"
