[tool.poetry]
name = "imgfilter"
version = "0.2.2"
description = "Filterable image file selection dialogue"
authors = ["0E9B061F <0E9B061F@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
PySide6 = "^6.3.2"

[tool.poetry.scripts]
imgfilter = 'imgfilter.main:execute'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
